--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -20,40 +21,19 @@
             <h1>Welcome to My Website</h1>
             <p>This is a simple website hosted on GitHub Pages.</p>
         </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 My Personal Website</p>
-    </footer>
-</body>
-</html>
-
-
-
-
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="about">
-            <h1>About Me</h1>
-            <p>Here you can write some information about yourself.</p>
+        <section class="features">
+            <div class="feature">
+                <h2>Feature 1</h2>
+                <p>Some interesting details about feature 1.</p>
+            </div>
+            <div class="feature">
+                <h2>Feature 2</h2>
+                <p>Some interesting details about feature 2.</p>
+            </div>
+            <div class="feature">
+                <h2>Feature 3</h2>
+                <p>Some interesting details about feature 3.</p>
+            </div>
         </section>
     </main>
     <footer>
@@ -61,60 +41,3 @@
     </footer>
 </body>
 </html>
-
-
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
-
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 1em 0;
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 10px;
-}
-
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.hero {
-    background-color: #4CAF50;
-    color: white;
-    padding: 2em 0;
-    text-align: center;
-}
-
-.about {
-    padding: 2em;
-}
-
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1em 0;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-
-
-
-
-
