--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Welcome to My Website</h1>
-            <p>This is a simple website hosted on GitHub Pages.</p>
+            <h1>Abhijeet Pathy's Website</h1>
+            <p>I am testing this website</p>
         </section>
         <section class="features">
             <div class="feature">
                 <h2>Feature 1</h2>
-                <p>Some interesting details about feature 1.</p>
+                <p>Some intersting reading that I have been doing recently.</p>
             </div>
             <div class="feature">
                 <h2>Feature 2</h2>
