--- a/index.html
+++ b/index.html
@@ -3,41 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
+    <title>Abhijeet Pathy - Insights, Investment, and Community Service</title>
+    <meta name="title" content="Abhijeet Pathy - Insights, Investment, and Community Service">
+    <meta name="description" content="Explore Abhijeet Pathy's personal journey, investment insights, and commitment to social services and waste management.">
+    <meta property="og:title" content="Abhijeet Pathy - Insights, Investment, and Community Service">
+    <meta property="og:description" content="Explore Abhijeet Pathy's personal journey, investment insights, and commitment to social services and waste management.">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="hero">
-            <h1>Abhijeet Pathy's Website</h1>
-            <p>I am testing this website</p>
+        <section>
+            <h1>Welcome to Abhijeet Pathy's Website</h1>
+            <p>Explore Abhijeet Pathy's personal journey, investment insights, and commitment to social services and waste management.</p>
         </section>
-        <section class="features">
-            <div class="feature">
-                <h2>Feature 1</h2>
-                <p>Some intersting reading that I have been doing recently.</p>
-            </div>
-            <div class="feature">
-                <h2>Feature 2</h2>
-                <p>Some interesting details about feature 2.</p>
-            </div>
-            <div class="feature">
-                <h2>Feature 3</h2>
-                <p>Some interesting details about feature 3.</p>
-            </div>
-        </section>
+        <!-- Add more sections as needed -->
     </main>
     <footer>
-        <p>&copy; 2024 My Personal Website</p>
+        <p>&copy; 2024 Abhijeet Pathy. All rights reserved.</p>
     </footer>
 </body>
 </html>
