--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <div class="menu-toggle">☰</div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
