--- a/index.html
+++ b/index.html
@@ -21,40 +21,86 @@
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#financial-education">Financial Education</a></li>
+                    <li><a href="#social-initiatives">Social Initiatives</a></li>
+                    <li><a href="#environmental-solutions">Environmental Solutions</a></li>
+                    <li><a href="#join-me">Join Me</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section id="home" class="hero">
+        <section id="home" class="home">
             <div class="container">
                 <h2>Welcome to My Website</h2>
+                <img src="https://via.placeholder.com/400" alt="Abhijeet Pathy">
                 <p>Explore Abhijeet Pathy's personal journey, investment insights, and commitment to social services and waste management.</p>
             </div>
         </section>
-        <section id="about" class="about">
+        <section id="financial-education" class="financial-education">
             <div class="container">
-                <h2>About Me</h2>
-                <p>Abhijeet Pathy is an avid investor with a keen interest in waste management and social services. With years of experience in the industry, he has developed a unique perspective on investment strategies and community service initiatives.</p>
-                <img src="https://via.placeholder.com/400" alt="About Image">
+                <h2>Financial Education</h2>
+                <p>Learn about financial education through blogs, infographics, and videos.</p>
+                <div class="content">
+                    <div class="item">
+                        <h3>Blog Title 1</h3>
+                        <p>Summary of the blog...</p>
+                    </div>
+                    <div class="item">
+                        <h3>Infographic Title</h3>
+                        <img src="https://via.placeholder.com/200" alt="Infographic">
+                    </div>
+                    <div class="item">
+                        <h3>Video Title</h3>
+                        <iframe width="300" height="200" src="https://www.youtube.com/embed/example" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
             </div>
         </section>
-        <section id="services" class="services">
+        <section id="social-initiatives" class="social-initiatives">
             <div class="container">
-                <h2>Services</h2>
-                <ul>
-                    <li>Investment Consulting</li>
-                    <li>Waste Management Solutions</li>
-                    <li>Community Service Projects</li>
-                </ul>
+                <h2>Social Initiatives</h2>
+                <p>Discover various social initiatives and projects.</p>
+                <div class="content">
+                    <div class="item">
+                        <h3>Blog Title 2</h3>
+                        <p>Summary of the blog...</p>
+                    </div>
+                    <div class="item">
+                        <h3>Infographic Title</h3>
+                        <img src="https://via.placeholder.com/200" alt="Infographic">
+                    </div>
+                    <div class="item">
+                        <h3>Video Title</h3>
+                        <iframe width="300" height="200" src="https://www.youtube.com/embed/example" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
             </div>
         </section>
-        <section id="contact" class="contact">
+        <section id="environmental-solutions" class="environmental-solutions">
             <div class="container">
-                <h2>Contact Me</h2>
+                <h2>Environmental Solutions</h2>
+                <p>Explore environmental solutions through blogs, infographics, and videos.</p>
+                <div class="content">
+                    <div class="item">
+                        <h3>Blog Title 3</h3>
+                        <p>Summary of the blog...</p>
+                    </div>
+                    <div class="item">
+                        <h3>Infographic Title</h3>
+                        <img src="https://via.placeholder.com/200" alt="Infographic">
+                    </div>
+                    <div class="item">
+                        <h3>Video Title</h3>
+                        <iframe width="300" height="200" src="https://www.youtube.com/embed/example" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="join-me" class="join-me">
+            <div class="container">
+                <h2>Join Me</h2>
+                <p>Contact me to join my initiatives.</p>
                 <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
