--- a/index.html
+++ b/index.html
@@ -1,77 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Abhijeet Pathy</title>
-  <link rel="stylesheet" href="style.css">
-  <!-- AOS CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Abhijeet Pathy - Personal Website</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <nav>
-      <div class="logo">
-        <a href="#">Abhijeet Pathy</a>
-      </div>
+    <!-- Navigation -->
+    <nav id="navbar" class="fixed top-0 w-full bg-white shadow-md z-50">
+        <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+            <a href="#" class="text-2xl font-bold text-gray-800">Abhijeet Pathy</a>
+            <div class="nav-links">
+                <a href="#home" class="mx-2 text-gray-600 hover:text-blue-600">Home</a>
+                <a href="#about" class="mx-2 text-gray-600 hover:text-blue-600">About</a>
+                <a href="#investment" class="mx-2 text-gray-600 hover:text-blue-600">Investment</a>
+                <a href="#social" class="mx-2 text-gray-600 hover:text-blue-600">Social Initiative</a>
+                <a href="#environment" class="mx-2 text-gray-600 hover:text-blue-600">Environment</a>
+                <a href="#contact" class="mx-2 text-gray-600 hover:text-blue-600">Contact</a>
+            </div>
+            <div class="mobile-menu-toggle cursor-pointer md:hidden">
+                <div class="bar1 w-6 h-1 bg-gray-700 my-1 transition-all"></div>
+                <div class="bar2 w-6 h-1 bg-gray-700 my-1 transition-all"></div>
+                <div class="bar3 w-6 h-1 bg-gray-700 my-1 transition-all"></div>
+            </div>
+        </div>
     </nav>
-  </header>
 
-  <main>
-    <section class="contact">
-      <h2>Contact Information</h2>
-      <div class="contact-details">
-        <div class="contact-details__row" data-aos="fade-up">
-          <div class="contact-details__email">
-            <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path d="M12 13L0 7V3l12 7 12-7v4l-12 6z"/>
-            </svg>
-            Email: <a href="mailto:abhijeet@example.com">abhijeet@example.com</a>
-          </div>
-        </div>
-        <div class="contact-details__row" data-aos="fade-up">
-          <div class="contact-details__location">
-            <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path d="M12 2C8.13 2 5 5.13 5 9c0 3.09 2.15 5.75 5 7.08 2.85-1.33 5-3.99 5-7.08 0-3.87-3.13-7-7-7zm0 10c-1.33 0-2.5-.68-3.26-1.72L12 9l3.26 3.28C14.5 11.32 13.33 12 12 12z"/>
-            </svg>
-            Location: San Francisco, CA
-          </div>
-        </div>
-        <div class="contact-details__row" data-aos="fade-up">
-          <div class="contact-details__hours">
-            <h3>Hours of Operation</h3>
-            <ul class="hours-list">
-              <li class="hours-list__item">
-                <span class="hours-list__from">Mon-Fri: </span>
-                <span class="hours-list__to">9:00 AM - 5:00 PM</span>
-              </li>
-              <li class="hours-list__item">
-                <span class="hours-list__from">Sat: </span>
-                <span class="hours-list__to">10:00 AM - 4:00 PM</span>
-              </li>
-              <li class="hours-list__item">
-                <span class="hours-list__from">Sun: </span>
-                <span class="hours-list__to">Closed</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
+    <!-- Main Content Sections -->
+    <main>
+        <!-- Home Section -->
+        <section id="home" class="min-h-screen flex items-center justify-center bg-gradient-to-r from-blue-100 to-blue-200">
+            <div class="text-center">
+                <h1 class="text-5xl font-bold mb-4 typing-animation">Abhijeet Pathy</h1>
+                <p class="text-xl text-gray-600 fade-in-text">Professional | Investor | Social Innovator</p>
+            </div>
+        </section>
 
-  <footer>
-    <div class="sb-footer">
-      <ul>
-        <li><a href="https://twitter.com" class="sb-footer__social-link">Twitter</a></li>
-        <li><a href="https://linkedin.com" class="sb-footer__social-link">LinkedIn</a></li>
-        <li><a href="https://github.com" class="sb-footer__social-link">GitHub</a></li>
-      </ul>
-    </div>
-  </footer>
+        <!-- About Section -->
+        <section id="about" class="container mx-auto px-4 py-16">
+            <div class="grid md:grid-cols-2 items-center gap-8">
+                <div class="about-image-container">
+                    <img src="https://via.placeholder.com/500" alt="Abhijeet Pathy" class="rounded-lg shadow-lg transform hover:scale-105 transition-transform">
+                </div>
+                <div class="about-content">
+                    <h2 class="text-3xl font-bold mb-4">About Me</h2>
+                    <p class="text-gray-600 mb-4">
+                        A passionate professional dedicated to creating meaningful impact through strategic investments, 
+                        social initiatives, and environmental sustainability.
+                    </p>
+                    <div class="skills-container">
+                        <div class="skill-bar mb-2">
+                            <div class="skill-name">Investment Strategy</div>
+                            <div class="skill-progress" data-progress="85"></div>
+                        </div>
+                        <div class="skill-bar mb-2">
+                            <div class="skill-name">Social Innovation</div>
+                            <div class="skill-progress" data-progress="75"></div>
+                        </div>
+                        <div class="skill-bar mb-2">
+                            <div class="skill-name">Environmental Advocacy</div>
+                            <div class="skill-progress" data-progress="90"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-  <script src="script.js"></script>
-  <!-- AOS JavaScript -->
-  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+        <!-- Investment Section -->
+        <section id="investment" class="bg-gray-100 py-16">
+            <div class="container mx-auto px-4">
+                <h2 class="text-3xl font-bold text-center mb-8">Investment Insights</h2>
+                <div class="grid md:grid-cols-3 gap-6">
+                    <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+                        <h3 class="text-xl font-semibold mb-4">Long-Term Strategy</h3>
+                        <p class="text-gray-600">Focusing on sustainable and value-driven investments.</p>
+                    </div>
+                    <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+                        <h3 class="text-xl font-semibold mb-4">Diversification</h3>
+                        <p class="text-gray-600">Spreading risks across multiple sectors and asset classes.</p>
+                    </div>
+                    <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+                        <h3 class="text-xl font-semibold mb-4">Continuous Learning</h3>
+                        <p class="text-gray-600">Adapting strategies based on market insights and trends.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="py-16 bg-blue-50">
+            <div class="container mx-auto px-4">
+                <h2 class="text-3xl font-bold text-center mb-8">Contact Me</h2>
+                <form id="contact-form" class="max-w-lg mx-auto">
+                    <div class="mb-4">
+                        <label class="block text-gray-700 mb-2">Name</label>
+                        <input type="text" id="name" required class="w-full px-3 py-2 border rounded-md">
+                    </div>
+                    <div class="mb-4">
+                        <label class="block text-gray-700 mb-2">Email</label>
+                        <input type="email" id="email" required class="w-full px-3 py-2 border rounded-md">
+                    </div>
+                    <div class="mb-4">
+                        <label class="block text-gray-700 mb-2">Message</label>
+                        <textarea id="message" required class="w-full px-3 py-2 border rounded-md" rows="4"></textarea>
+                    </div>
+                    <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-md hover:bg-blue-600 transition-colors">
+                        Send Message
+                    </button>
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-gray-800 text-white py-6 text-center">
+        <p>&copy; 2024 Abhijeet Pathy. All rights reserved.</p>
+        <div class="social-links mt-4">
+            <a href="#" class="mx-2 hover:text-blue-400">LinkedIn</a>
+            <a href="#" class="mx-2 hover:text-blue-400">Twitter</a>
+            <a href="#" class="mx-2 hover:text-blue-400">GitHub</a>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
