--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="nav-links">
                 <a href="#home" class="mx-2 text-gray-600 hover:text-blue-600">Home</a>
                 <a href="#about" class="mx-2 text-gray-600 hover:text-blue-600">About</a>
-                <a href="#Finance" class="mx-2 text-gray-600 hover:text-blue-600">Finance</a>
+                <a href="#finance" class="mx-2 text-gray-600 hover:text-blue-600">Finance</a>
                 <a href="#social" class="mx-2 text-gray-600 hover:text-blue-600">Social Initiative</a>
                 <a href="#environment" class="mx-2 text-gray-600 hover:text-blue-600">Environment</a>
                 <a href="#contact" class="mx-2 text-gray-600 hover:text-blue-600">Contact</a>
@@ -68,63 +68,63 @@
         </section>
 
         <!-- Investment Section -->
-        <section id="Finance" class="bg-gray-100 py-16">
+        <section id="finance" class="bg-gray-100 py-16">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-bold text-center mb-8">Investment Insights</h2>
                 <div class="grid md:grid-cols-3 gap-6">
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-                        <h3 class="text-xl font-semibold mb-4">Long-Term Strategy</h3>
-                        <p class="text-gray-600">Focusing on sustainable and value-driven investments.</p>
+                        <h3 class="text-xl font-semibold mb-4">Personal Finance</h3>
+                        <p class="text-gray-600">The focus is on managing personal finances, including budgeting, saving, and long-term planning, aiming to connect with individuals looking to improve financial literacy and stability.</p>
                     </div>
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-                        <h3 class="text-xl font-semibold mb-4">Diversification</h3>
-                        <p class="text-gray-600">Spreading risks across multiple sectors and asset classes.</p>
+                        <h3 class="text-xl font-semibold mb-4">Investment Philospohy</h3>
+                        <p class="text-gray-600">The goal is to share investment strategies and philosophies that prioritize long-term, value-driven decisions, seeking to engage those interested in thoughtful wealth management.</p>
                     </div>
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                         <h3 class="text-xl font-semibold mb-4">Continuous Learning</h3>
-                        <p class="text-gray-600">Adapting strategies based on market insights and trends.</p>
+                        <p class="text-gray-600">The initiative promotes continuous learning in finance and investing, connecting individuals who believe in staying informed and evolving their financial knowledge over time.</p>
                     </div>
                 </div>
             </div>
         </section>
         
 <!-- Social initive Section -->
-        <section id="investment" class="bg-gray-100 py-16">
+        <section id="social" class="bg-gray-100 py-16">
             <div class="container mx-auto px-4">
-                <h2 class="text-3xl font-bold text-center mb-8">Investment Insights</h2>
+                <h2 class="text-3xl font-bold text-center mb-8">Social Initative</h2>
                 <div class="grid md:grid-cols-3 gap-6">
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-                        <h3 class="text-xl font-semibold mb-4">Long-Term Strategy</h3>
-                        <p class="text-gray-600">Focusing on sustainable and value-driven investments.</p>
+                        <h3 class="text-xl font-semibold mb-4">Underprivileged Student Help</h3>
+                        <p class="text-gray-600">The goal is to support underprivileged students through scholarships, mentorship, and educational workshops, aiming to connect with like-minded individuals to provide equal opportunities for education and growth.</p>
                     </div>
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-                        <h3 class="text-xl font-semibold mb-4">Diversification</h3>
-                        <p class="text-gray-600">Spreading risks across multiple sectors and asset classes.</p>
+                        <h3 class="text-xl font-semibold mb-4">Peer Counseling</h3>
+                        <p class="text-gray-600">The focus is on offering a supportive environment for students through peer counseling programs, seeking to engage individuals interested in promoting mental well-being and community support.</p>
                     </div>
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-                        <h3 class="text-xl font-semibold mb-4">Continuous Learning</h3>
-                        <p class="text-gray-600">Adapting strategies based on market insights and trends.</p>
+                        <h3 class="text-xl font-semibold mb-4">Philosophy and Psychology</h3>
+                        <p class="text-gray-600">This section explores philosophy and psychology to encourage critical thinking, self-awareness, and personal growth, fostering a community focused on learning and mental well-being.</p>
                     </div>
                 </div>
             </div>
         </section>
         
 <!-- Environment Section -->
-        <section id="investment" class="bg-gray-100 py-16">
+        <section id="environment" class="bg-gray-100 py-16">
             <div class="container mx-auto px-4">
-                <h2 class="text-3xl font-bold text-center mb-8">Investment Insights</h2>
+                <h2 class="text-3xl font-bold text-center mb-8">Environment</h2>
                 <div class="grid md:grid-cols-3 gap-6">
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-                        <h3 class="text-xl font-semibold mb-4">Long-Term Strategy</h3>
-                        <p class="text-gray-600">Focusing on sustainable and value-driven investments.</p>
+                        <h3 class="text-xl font-semibold mb-4">Environmental Education</h3>
+                        <p class="text-gray-600">The plan is to promote reducing, reusing, and recycling materials through community programs and workshops, aiming to find like-minded individuals to help minimize landfill waste.</p>
                     </div>
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-                        <h3 class="text-xl font-semibold mb-4">Diversification</h3>
-                        <p class="text-gray-600">Spreading risks across multiple sectors and asset classes.</p>
+                        <h3 class="text-xl font-semibold mb-4">Environmental Economics</h3>
+                        <p class="text-gray-600">The commitment involves organizing community clean-ups and advocating for green spaces, seeking to engage and attract people passionate about healthier living areas and pollution prevention.</p>
                     </div>
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-                        <h3 class="text-xl font-semibold mb-4">Continuous Learning</h3>
-                        <p class="text-gray-600">Adapting strategies based on market insights and trends.</p>
+                        <h3 class="text-xl font-semibold mb-4">Cost of Pollution</h3>
+                        <p class="text-gray-600">The initiative aims to highlight the hidden costs of pollution on health and the economy through research and campaigns, focusing on finding individuals to advocate for cleaner technologies and policies.</p>
                     </div>
                 </div>
             </div>
