--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section id="about" class="container mx-auto px-4 py-16">
             <div class="grid md:grid-cols-2 items-center gap-8">
                 <div class="about-image-container">
-                    <img src="https://via.placeholder.com/500" alt="Abhijeet Pathy" class="rounded-lg shadow-lg transform hover:scale-105 transition-transform">
+                    <img src="my_image.jpg" alt="Abhijeet Pathy" class="rounded-lg shadow-lg transform hover:scale-105 transition-transform">
                 </div>
                 <div class="about-content">
                     <h2 class="text-3xl font-bold mb-4">About Me</h2>
