--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
 
         <!-- Investment Section -->
-        <section id="finance" class="bg-gray-100 py-16">
+        <section id="finance" class="bg-blue-100 py-16">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-bold text-center mb-8">Investment Insights</h2>
                 <div class="grid md:grid-cols-3 gap-6">
