--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
 
         <!-- Investment Section -->
-        <section id="finance" class="bg-yellow-100 py-16">
+        <section id="finance" class="bg-red-50 py-16">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-bold text-center mb-8">Investment Insights</h2>
                 <div class="grid md:grid-cols-3 gap-6">
@@ -89,7 +89,7 @@
         </section>
         
 <!-- Social initive Section -->
-        <section id="social" class="bg-green-50 py-16">
+        <section id="social" class="bg-yellow-50 py-16">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-bold text-center mb-8">Social Initative</h2>
                 <div class="grid md:grid-cols-3 gap-6">
@@ -110,7 +110,7 @@
         </section>
         
 <!-- Environment Section -->
-        <section id="environment" class="bg-red-50 py-16">
+        <section id="environment" class="bg-green-50 py-16">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-bold text-center mb-8">Environment</h2>
                 <div class="grid md:grid-cols-3 gap-6">
