--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abhijeet Pathy - Personal Website</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
@@ -67,22 +68,24 @@
             </div>
         </section>
 
-        <!-- Investment Section -->
         <section id="finance" class="bg-red-50 py-16">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-bold text-center mb-8">Investment Insights</h2>
                 <div class="grid md:grid-cols-3 gap-6">
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-                        <h3 class="text-xl font-semibold mb-4">Personal Finance</h3>
-                        <p class="text-gray-600">The focus is on managing personal finances, including budgeting, saving, and long-term planning, aiming to connect with individuals looking to improve financial literacy and stability.</p>
+                        <h3 class="text-xl font-semibold mb-4">Your First Article</h3>
+                        <p class="text-gray-600">A concise summary of your article that provides context and sparks curiosity.</p>
+                        <a href="articles/first-article.html" class="text-blue-600 hover:underline mt-4 inline-block">Read Full Article</a>
                     </div>
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-                        <h3 class="text-xl font-semibold mb-4">Investment Philospohy</h3>
-                        <p class="text-gray-600">The goal is to share investment strategies and philosophies that prioritize long-term, value-driven decisions, seeking to engage those interested in thoughtful wealth management.</p>
+                        <h3 class="text-xl font-semibold mb-4">Second Article Title</h3>
+                        <p class="text-gray-600">Another engaging description that gives readers a preview of the article's content.</p>
+                        <a href="articles/second-article.html" class="text-blue-600 hover:underline mt-4 inline-block">Read Full Article</a>
                     </div>
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-                        <h3 class="text-xl font-semibold mb-4">Continuous Learning</h3>
-                        <p class="text-gray-600">The initiative promotes continuous learning in finance and investing, connecting individuals who believe in staying informed and evolving their financial knowledge over time.</p>
+                        <h3 class="text-xl font-semibold mb-4">Third Article Title</h3>
+                        <p class="text-gray-600">A compelling snippet that encourages readers to click and explore the full article.</p>
+                        <a href="articles/third-article.html" class="text-blue-600 hover:underline mt-4 inline-block">Read Full Article</a>
                     </div>
                 </div>
             </div>
