updating in index

--- a/index.html
+++ b/index.html
@@ -75,17 +75,29 @@
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                         <h3 class="text-xl font-semibold mb-4">Personal Finance</h3>
                         <p class="text-gray-600">The focus is on managing personal finances, including budgeting, saving, and long-term planning, aiming to connect with individuals looking to improve financial literacy and stability.</p>
-                        <a href="articles/first-article.html" class="text-blue-600 hover:underline mt-4 inline-block">Read Full Article</a>
+                        <div class="mt-4 space-y-2">
+                            <a href="articles/budgeting-basics.html" class="text-blue-600 hover:underline block">Budgeting Basics</a>
+                            <a href="articles/saving-strategies.html" class="text-blue-600 hover:underline block">Saving Strategies</a>
+                            <a href="articles.html#personal-finance" class="text-blue-600 hover:underline block font-semibold">View All Articles</a>
+                        </div>
                     </div>
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                         <h3 class="text-xl font-semibold mb-4">Investment Philosophy</h3>
                         <p class="text-gray-600">The goal is to share investment strategies and philosophies that prioritize long-term, value-driven decisions, seeking to engage those interested in thoughtful wealth management.</p>
-                        <a href="articles/second-article.html" class="text-blue-600 hover:underline mt-4 inline-block">Read Full Article</a>
+                        <div class="mt-4 space-y-2">
+                            <a href="articles/long-term-investing.html" class="text-blue-600 hover:underline block">Long-Term Investing</a>
+                            <a href="articles/portfolio-diversification.html" class="text-blue-600 hover:underline block">Portfolio Diversification</a>
+                            <a href="articles.html#investment-philosophy" class="text-blue-600 hover:underline block font-semibold">View All Articles</a>
+                        </div>
                     </div>
                     <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                         <h3 class="text-xl font-semibold mb-4">Continuous Learning</h3>
                         <p class="text-gray-600">The initiative promotes continuous learning in finance and investing, connecting individuals who believe in staying informed and evolving their financial knowledge over time.</p>
-                        <a href="articles/third-article.html" class="text-blue-600 hover:underline mt-4 inline-block">Read Full Article</a>
+                        <div class="mt-4 space-y-2">
+                            <a href="articles/financial-education.html" class="text-blue-600 hover:underline block">Financial Education</a>
+                            <a href="articles/market-trends.html" class="text-blue-600 hover:underline block">Market Trends</a>
+                            <a href="articles.html#continuous-learning" class="text-blue-600 hover:underline block font-semibold">View All Articles</a>
+                        </div>
                     </div>
                 </div>
             </div>
