--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-bold text-center mb-8">Investment Insights</h2>
                 <div class="grid md:grid-cols-3 gap-6">
-                    <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+                    <div class="investment-card bg-red-50 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                         <h3 class="text-xl font-semibold mb-4">Personal Finance</h3>
                         <p class="text-gray-600">The focus is on managing personal finances, including budgeting, saving, and long-term planning, aiming to connect with individuals looking to improve financial literacy and stability.</p>
                         <div class="mt-4 space-y-2">
@@ -81,7 +81,7 @@
                             <a href="articles.html#personal-finance" class="text-blue-600 hover:underline block font-semibold">View All Articles</a>
                         </div>
                     </div>
-                    <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+                    <div class="investment-card bg-red-50 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                         <h3 class="text-xl font-semibold mb-4">Investment Philosophy</h3>
                         <p class="text-gray-600">The goal is to share investment strategies and philosophies that prioritize long-term, value-driven decisions, seeking to engage those interested in thoughtful wealth management.</p>
                         <div class="mt-4 space-y-2">
@@ -90,7 +90,7 @@
                             <a href="articles.html#investment-philosophy" class="text-blue-600 hover:underline block font-semibold">View All Articles</a>
                         </div>
                     </div>
-                    <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+                    <div class="investment-card bg-red-50 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                         <h3 class="text-xl font-semibold mb-4">Continuous Learning</h3>
                         <p class="text-gray-600">The initiative promotes continuous learning in finance and investing, connecting individuals who believe in staying informed and evolving their financial knowledge over time.</p>
                         <div class="mt-4 space-y-2">
