--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-bold text-center mb-8">Investment Insights</h2>
                 <div class="grid md:grid-cols-3 gap-6">
-                    <div class="investment-card bg-red-50 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+                    <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                         <h3 class="text-xl font-semibold mb-4">Personal Finance</h3>
                         <p class="text-gray-600">The focus is on managing personal finances, including budgeting, saving, and long-term planning, aiming to connect with individuals looking to improve financial literacy and stability.</p>
                         <div class="mt-4 space-y-2">
@@ -81,7 +81,7 @@
                             <a href="articles.html#personal-finance" class="text-blue-600 hover:underline block font-semibold">View All Articles</a>
                         </div>
                     </div>
-                    <div class="investment-card bg-red-50 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+                    <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                         <h3 class="text-xl font-semibold mb-4">Investment Philosophy</h3>
                         <p class="text-gray-600">The goal is to share investment strategies and philosophies that prioritize long-term, value-driven decisions, seeking to engage those interested in thoughtful wealth management.</p>
                         <div class="mt-4 space-y-2">
@@ -90,7 +90,7 @@
                             <a href="articles.html#investment-philosophy" class="text-blue-600 hover:underline block font-semibold">View All Articles</a>
                         </div>
                     </div>
-                    <div class="investment-card bg-red-50 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+                    <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                         <h3 class="text-xl font-semibold mb-4">Continuous Learning</h3>
                         <p class="text-gray-600">The initiative promotes continuous learning in finance and investing, connecting individuals who believe in staying informed and evolving their financial knowledge over time.</p>
                         <div class="mt-4 space-y-2">
@@ -108,7 +108,7 @@
     <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-center mb-8">Social Initiative</h2>
         <div class="grid md:grid-cols-3 gap-6">
-            <div class="investment-card bg-yellow-50 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+            <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                 <h3 class="text-xl font-semibold mb-4">Underprivileged Student Help</h3>
                 <p class="text-gray-600">The goal is to support underprivileged students through scholarships, mentorship, and educational workshops, aiming to connect with like-minded individuals to provide equal opportunities for education and growth.</p>
                 <div class="mt-4 space-y-2">
@@ -117,7 +117,7 @@
                     <a href="articles.html#underprivileged-student-help" class="text-blue-600 hover:underline block font-semibold">View All Articles</a>
                 </div>
             </div>
-            <div class="investment-card bg-yellow-50 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+            <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                 <h3 class="text-xl font-semibold mb-4">Peer Counseling</h3>
                 <p class="text-gray-600">The focus is on offering a supportive environment for students through peer counseling programs, seeking to engage individuals interested in promoting mental well-being and community support.</p>
                 <div class="mt-4 space-y-2">
@@ -126,7 +126,7 @@
                     <a href="articles.html#peer-counseling" class="text-blue-600 hover:underline block font-semibold">View All Articles</a>
                 </div>
             </div>
-            <div class="investment-card bg-yellow-50 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+            <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                 <h3 class="text-xl font-semibold mb-4">Philosophy and Psychology</h3>
                 <p class="text-gray-600">This section explores philosophy and psychology to encourage critical thinking, self-awareness, and personal growth, fostering a community focused on learning and mental well-being.</p>
                 <div class="mt-4 space-y-2">
@@ -144,7 +144,7 @@
     <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-center mb-8">Environment</h2>
         <div class="grid md:grid-cols-3 gap-6">
-            <div class="investment-card bg-green-50 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+            <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                 <h3 class="text-xl font-semibold mb-4">Environmental Education</h3>
                 <p class="text-gray-600">The plan is to promote reducing, reusing, and recycling materials through community programs and workshops, aiming to find like-minded individuals to help minimize landfill waste.</p>
                 <div class="mt-4 space-y-2">
@@ -153,7 +153,7 @@
                     <a href="articles.html#environmental-education" class="text-blue-600 hover:underline block font-semibold">View All Articles</a>
                 </div>
             </div>
-            <div class="investment-card bg-green-50 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+            <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                 <h3 class="text-xl font-semibold mb-4">Environmental Economics</h3>
                 <p class="text-gray-600">The commitment involves organizing community clean-ups and advocating for green spaces, seeking to engage and attract people passionate about healthier living areas and pollution prevention.</p>
                 <div class="mt-4 space-y-2">
@@ -162,7 +162,7 @@
                     <a href="articles.html#environmental-economics" class="text-blue-600 hover:underline block font-semibold">View All Articles</a>
                 </div>
             </div>
-            <div class="investment-card bg-green-50 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+            <div class="investment-card bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
                 <h3 class="text-xl font-semibold mb-4">Cost of Pollution</h3>
                 <p class="text-gray-600">The initiative aims to highlight the hidden costs of pollution on health and the economy through research and campaigns, focusing on finding individuals to advocate for cleaner technologies and policies.</p>
                 <div class="mt-4 space-y-2">
