Updating social initive section

--- a/articles.html
+++ b/articles.html
@@ -82,3 +82,143 @@
     </div>
 </body>
 </html>
+
+
+<!-- Social Initiative Section -->
+<section id="underprivileged-student-help" class="mb-12">
+    <h2 class="text-3xl font-semibold mb-6 text-gray-800">Underprivileged Student Help</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Scholarship Programs</h3>
+            <p class="text-gray-600 mb-4">Exploring opportunities and resources for educational scholarships and financial support.</p>
+            <a href="articles/scholarships.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Mentorship Opportunities</h3>
+            <p class="text-gray-600 mb-4">Connecting students with mentors to guide their academic and professional journey.</p>
+            <a href="articles/mentorship.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Educational Workshops</h3>
+            <p class="text-gray-600 mb-4">Interactive learning sessions designed to empower underprivileged students.</p>
+            <a href="articles/educational-workshops.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+    </div>
+</section>
+
+<!-- Peer Counseling Section -->
+<section id="peer-counseling" class="mb-12">
+    <h2 class="text-3xl font-semibold mb-6 text-gray-800">Peer Counseling</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Mental Health Resources</h3>
+            <p class="text-gray-600 mb-4">Comprehensive guides and support for student mental health and well-being.</p>
+            <a href="articles/mental-health.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Counseling Techniques</h3>
+            <p class="text-gray-600 mb-4">Effective strategies for peer support and emotional resilience.</p>
+            <a href="articles/counseling-techniques.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Community Support</h3>
+            <p class="text-gray-600 mb-4">Building supportive networks and fostering mental well-being.</p>
+            <a href="articles/community-support.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+    </div>
+</section>
+
+<!-- Philosophy and Psychology Section -->
+<section id="philosophy-psychology" class="mb-12">
+    <h2 class="text-3xl font-semibold mb-6 text-gray-800">Philosophy and Psychology</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Critical Thinking</h3>
+            <p class="text-gray-600 mb-4">Techniques and strategies to develop analytical and rational thinking skills.</p>
+            <a href="articles/critical-thinking.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Self-Awareness</h3>
+            <p class="text-gray-600 mb-4">Exploring methods for personal growth and understanding oneself.</p>
+            <a href="articles/self-awareness.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Personal Development</h3>
+            <p class="text-gray-600 mb-4">Insights and strategies for holistic personal and psychological growth.</p>
+            <a href="articles/personal-development.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+    </div>
+</section>
+
+<!-- Environment Section -->
+<section id="environmental-education" class="mb-12">
+    <h2 class="text-3xl font-semibold mb-6 text-gray-800">Environmental Education</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Recycling Basics</h3>
+            <p class="text-gray-600 mb-4">Understanding the principles of recycling and waste reduction.</p>
+            <a href="articles/recycling.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Waste Reduction</h3>
+            <p class="text-gray-600 mb-4">Strategies for minimizing environmental impact through waste management.</p>
+            <a href="articles/waste-reduction.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Sustainable Practices</h3>
+            <p class="text-gray-600 mb-4">Practical approaches to implementing eco-friendly lifestyle choices.</p>
+            <a href="articles/sustainable-practices.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+    </div>
+</section>
+
+<!-- Environmental Economics Section -->
+<section id="environmental-economics" class="mb-12">
+    <h2 class="text-3xl font-semibold mb-6 text-gray-800">Environmental Economics</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Community Cleanups</h3>
+            <p class="text-gray-600 mb-4">Organizing and participating in local environmental preservation efforts.</p>
+            <a href="articles/community-cleanups.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Green Space Advocacy</h3>
+            <p class="text-gray-600 mb-4">Promoting and protecting urban green spaces and natural environments.</p>
+            <a href="articles/green-spaces.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Sustainable Urban Planning</h3>
+            <p class="text-gray-600 mb-4">Exploring economic strategies for environmentally conscious urban development.</p>
+            <a href="articles/sustainable-urban-planning.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+    </div>
+</section>
+
+<!-- Cost of Pollution Section -->
+<section id="cost-of-pollution" class="mb-12">
+    <h2 class="text-3xl font-semibold mb-6 text-gray-800">Cost of Pollution</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Pollution Impact Research</h3>
+            <p class="text-gray-600 mb-4">Detailed analysis of environmental and economic consequences of pollution.</p>
+            <a href="articles/pollution-impact.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Clean Technology</h3>
+            <p class="text-gray-600 mb-4">Innovative technological solutions for reducing environmental pollution.</p>
+            <a href="articles/clean-technology.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold mb-4">Policy Advocacy</h3>
+            <p class="text-gray-600 mb-4">Strategies for promoting environmentally responsible policies and regulations.</p>
+            <a href="articles/policy-advocacy.html" class="text-blue-600 hover:underline">Read Full Article</a>
+        </div>
+    </div>
+</section>
+
+<div class="text-center mt-12">
+    <a href="../index.html" class="text-blue-600 hover:underline text-xl">Back to Home</a>
+</div>
+</div>
+</body>
+</html>
